2008-05-08  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-shutdown): Fixed docstring.

2008-05-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-amazon): Fix string to search the body.

2008-04-30  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m-ja.texi: Update translation.

	* w3m.el (w3m-goto-url): Use w3m-current-coding-system first to encode
	url if available; Also encode name part when url is local.
	(w3m-ignored-image-url-regexp): New variable.
	(w3m-toggle-inline-images-internal): Don't display image whose url
	match `w3m-ignored-image-url-regexp'.
	(w3m-decode-entities, w3m-decode-entities-string): Replace
	"(match-beginning 2)" with "(match-end 1)" to deal with emacs-21's
	strange behavior.

2008-04-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Support Mixi with SSL.

2008-04-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Add rule for the site of Allatanys.
	(w3m-filter-allatanys): New function.

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google
	search within EmacsWiki. Add rule for Google Mobile Proxy.

2008-04-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add the variables definition of `w3m-bookmark-mode',
	`w3m-bookmark-menu-items', `w3m-bookmark-menu-items-pre' and
	`w3m-tab-menubar-make-items-preitems' avoid byte-compile warnings.
	(w3m-rmouse-menubar): New user option.
	(w3m-setup-menu): Add the setup of `w3m-rmouse-menubar'.
	(w3m-mouse-major-mode-menu): Rewrite to use `w3m-rmouse-menubar'.
	(w3m-link-menu): Add `w3m-external-view-this-url'.

2008-04-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-turnoff-inline-images): New command.
	(w3m-toggle-inline-images): If force is 'turnoff, turn off to display
	images.
	(w3m-menubar): Add w3m-turnoff-inline-images.
	(w3m-lynx-like-map): Ditto.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Ditto.

2008-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>
